--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,16 +14,12 @@
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/lobster_two</item>
         <item name="fontFamily">@font/lobster_two</item>
+
+        <item name="textAppearanceHeadline6">@style/CustomHeadLine6</item>
     </style>
 
-    <style name="TextAppearance.Title" parent="TextAppearance.MaterialComponents.Headline6">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#555555</item>
-    </style>
-
-    <style name="TextAppearance.Title.Subtitle" parent="TextAppearance.Title">
+    <style name="CustomHeadLine6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textSize">18sp</item>
     </style>
-
 
 </resources>
