refactor: removed styles for title and subtitle
feat: added a textAppearanceHeadline5 to the title and headLine6 to subtitle

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -38,10 +38,10 @@
 
                 <TextView
                     android:id="@+id/title"
-                    style="@style/TextAppearance.Title"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:textAppearance="?attr/textAppearanceHeadline5"
                     android:text="@string/about_google_developer_groups"
                     app:layout_constraintEnd_toStartOf="@+id/end_grid"
                     app:layout_constraintStart_toStartOf="@+id/start_grid"
@@ -59,9 +59,9 @@
 
                 <TextView
                     android:id="@+id/subtitle"
-                    style="@style/TextAppearance.Title.Subtitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                     android:layout_marginTop="13dp"
                     android:text="@string/gdgs_are"
                     app:layout_constraintEnd_toStartOf="@id/end_grid"
