--- a/app/src/main/res/layout/add_gdg_fragment.xml
+++ b/app/src/main/res/layout/add_gdg_fragment.xml
@@ -41,13 +41,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/EditTextName"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/stage_image_description" />
 
             <EditText
                 android:id="@+id/EditTextName"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginTop="8dp"
+                android:hint="@string/your_name_label"
                 app:layout_constraintTop_toBottomOf="@+id/imageView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginTop="4dp"
+                android:hint="@string/email_label"
                 app:layout_constraintTop_toBottomOf="@+id/EditTextName"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp"
@@ -75,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginTop="4dp"
+                android:hint="@string/city_label"
                 app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp"
@@ -90,6 +94,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/EditTextCity"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp"
+                android:hint="@string/country_label"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="32dp"
                 android:layout_marginBottom="4dp"
@@ -101,6 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:layout_marginTop="4dp"
+                android:hint="@string/region_label"
                 app:layout_constraintTop_toBottomOf="@+id/EditTextCountry"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="32dp"
@@ -130,6 +136,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/spacing_normal"
+                android:contentDescription="@string/motivation"
                 android:layout_marginStart="32dp"
                 app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                 android:layout_marginBottom="1dp"
@@ -142,6 +149,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
                 android:ems="10"
+                android:hint="@string/enter_motivation"
                 app:layout_constraintTop_toBottomOf="@+id/EditTextRegion"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -162,6 +170,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/EditTextWhy"
                 android:backgroundTint="#00FF00"
+                android:contentDescription="@string/submit_button_description"
                 android:textColor="#FF0000"
                 android:textSize="12sp"
                 android:layout_marginBottom="12dp"
